gs/src/gxshade.c
@@ -55,7 +55,7 @@ shade_next_init(shade_coord_stream_t * cs,
     cs->pctm = &pis->ctm;
     if (data_source_is_stream(params->DataSource)) {
 	/*
-	 * Reset the data stream iff it is reusable -- either a reusable
+	 * Rewind the data stream iff it is reusable -- either a reusable
 	 * file or a reusable string.
 	 */
 	stream *s = cs->s = params->DataSource.data.strm;
@@ -63,7 +63,7 @@ shade_next_init(shade_coord_stream_t * cs,
 	if ((s->file != 0 && s->file_limit != max_long) ||
 	    (s->file == 0 && s->strm == 0)
 	    )
-	    sreset(s);
+	    sseek(s, 0);
     } else {
 	s_init(&cs->ds, NULL);
         sread_string(&cs->ds, params->DataSource.data.str.data,
